--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -3,6 +3,7 @@
   padding-bottom: 4rem;
   position: relative;
   z-index: 1;
+  scroll-margin-top: 70px;
 }
 
 .hero .container {
